Updated some text

--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
             <p>
               New York has many wonderful cultures and people living within its boundries and
               Ellis Island served as a beacon of hope and inspiration to immigrants who arrived
-              on its shores as far back as the mid to late 1800s. peoples, contribute to the state's rich heritage. Whether
-              witnessing the Northern Lights or exploring the historic Gold Rush
-              trails, Alaska is a land of discovery and wonder.
-            </p>
+              on its shores as far back as the mid to late 1800s. peoples, contribute to the state's rich heritage.
           </div>
 
           <button class="read-more-button" onclick="toggleMoreInfo()">
